# tracing-microjson

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
benches/: json_formatting.rs
benches/alloc/: comparison.rs  event.rs  main.rs  measurement.rs  writer.rs
src/: lib.rs  visitor.rs  writer.rs
tests/: integration_test.rs
tests/integration/: basic_events.rs  common.rs  compatibility.rs  configuration.rs  edge_cases.rs  main.rs  threads.rs  timestamps.rs
