[package]
name = "tracing-microjson"
version = "0.1.0"
edition = "2024"
description = "A tracing JSON layer with zero serialization framework dependencies"
license = "MIT"
repository = "https://github.com/JacobMillward/tracing-microjson"
keywords = ["tracing", "json", "logging"]
categories = ["development-tools::debugging"]

[dependencies]
tracing-core = "0.1.36"
tracing-subscriber = { version = "0.3.22", features = ["registry"] }

[dev-dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["registry", "json", "env-filter"] }
serde_json = "1.0.149"
