[package]
name = "tracing-microjson"
version = "0.1.0"
edition = "2024"
description = "A tracing JSON layer with zero serialization framework dependencies"
license = "GPL-3.0-or-later"
repository = "https://github.com/JacobMillward/tracing-microjson"
keywords = ["tracing", "json", "logging"]
categories = ["development-tools::debugging"]
rust-version = "1.85"
readme = "README.md"
exclude = [".github/"]

[features]
_bench_internals = []

[dependencies]
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "registry"] }

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "json", "env-filter"] }
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "json_formatting"
harness = false
required-features = ["_bench_internals"]
